@@ -3,8 +3,8 @@
 
 ### BEGIN INIT INFO
 # Provides:            swap
-# Required-Start:      modules
-# Should-Start:
+# Required-Start:
+# Should-Start:        modules
 # Required-Stop:       localnet
 # Should-Stop:
 # Default-Start:       S
